# SyncToGit

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.rst  Config.py  Evernote.py  EvernoteNoteParser.py  Git.py  GitTransaction.py  IndexGenerator.py  LICENSE.txt  MANIFEST.in  Makefile  NoShell.vbs  README.md  README.rst  index.html  main.py  params.json  requirements  setup.cfg  setup.py  sync.bat  sync.sh  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
example/: index.html
example/Notes/dsf/First Notebook/: Encrypted example.d9c1deac-2d62-405d-a5fc-26599e4e6a51.html  Getting Started.6f5d93dd-4db9-4b0d-a343-c0d4eb5ed35b.html  fd _002f _005c _0022 _0027 пва .txt.ab05137e-5788-47ed-831f-6af475b94ad5.html  Δ_002c Й_002c ק_002c م_002c _0e57_002c あ_002c 叶_002c 葉_002c and 말..211590e3-98bc-46bc-bfa9-d52da889514b.html  Δ_002c Й_002c ק_002c م_002c _0e57_002c あ_002c 叶_002c 葉_002c and 말..7b7a3ab8-f458-4163-98b4-e6ad5c8d20c1.html  ТУДУ.6cab5a3c-abcc-4457-80e6-211388093bec.html
example/Notes/отрипмакпенр арв/: _CON.f1e34227-1305-46b2-a662-a479e687b97a.html  ваат.da8d3c90-8f0b-440f-9b46-3c748f1bef65.html
example/Notes/тест _005c test _002f _0027 _0022/: _LPT1.e93dc319-c0c7-4244-93ab-7b224c9ae139.html
example/Notes/тест __ test/: _LPT1.e93dc319-c0c7-4244-93ab-7b224c9ae139.html
js/: decrypt.js  decrypt.min.js
src/synctogit/: __init__.py  __main__.py  config.py  filename_sanitizer.py  git_config.py  git_factory.py  git_transaction.py  main.py  print_on_exception_only.py  templates.py  timezone.py  xmlutils.py
src/synctogit/evernote/: auth.py  evernote.py  index_renderer.py  models.py  note_parser.py  service.py  stored_note.py  working_copy.py
src/synctogit/onenote/: auth.py  client.py  compat.py  index_renderer.py  models.py  oauth.py  onenote.py  page_parser.py  service.py  stored_note.py  working_copy.py
src/synctogit/service/: __init__.py  abc.py  exc.py  retries.py
src/synctogit/service/notes/: __init__.py  stored_note.py  sync_iteration.py  types.py  working_copy.py
src/synctogit/templates/evernote/: body_tail.j2
src/synctogit/templates/evernote/js/: decrypt.min.js
src/synctogit/templates/onenote/: index.j2
src/synctogit/templates/onenote/js/: inkml.min.js
src/synctogit/templates/todoist/: project.j2
src/synctogit/todoist/: client.py  models.py  projects_renderer.py  service.py  todoist.py  working_copy.py
synctogit/: Config.py  Evernote.py  EvernoteNoteParser.py  Git.py  GitTransaction.py  IndexGenerator.py  PrintOnExceptionOnly.py  __init__.py  __main__.py  config.py  evernote.py  evernote_note_parser.py  filename_sanitizer.py  git.py  git_config.py  git_factory.py  git_transaction.py  index_generator.py  main.py  print_on_exception_only.py  service.py  templates.py  xmlutils.py
synctogit/evernote/: __init__.py  auth.py  evernote.py  evernote_note_parser.py  exc.py  index_generator.py  index_renderer.py  models.py  note_parser.py  service.py  stored_note.py  working_copy.py  working_copy_note_parser.py
synctogit/js/: decrypt minify.bat
synctogit/onenote/: __init__.py  auth.py  client.py  compat.py  exc.py  index_renderer.py  models.py  oauth.py  onenote.py  page_parser.py  service.py  stored_note.py  working_copy.py
synctogit/service/: __init__.py  abc.py  auth.py  exc.py  retries.py
synctogit/service/notes/: __init__.py  stored_note.py  sync_iteration.py  types.py  working_copy.py
synctogit/templates/: _base.j2
synctogit/templates/evernote/: index.j2
synctogit/templates/onenote/: body_tail.j2
synctogit/templates/onenote/js/: inkml.min.js
synctogit/templates/todoist/: index.j2  project.j2
synctogit/todoist/: __init__.py  auth.py  models.py  projects_renderer.py  service.py  todoist.py  working_copy.py
templates_js/: gulpfile.js  package-lock.json  package.json
tests/: conftest.py  test_config.py  test_filename_sanitizer.py  test_git_factory.py  test_git_transaction.py  test_index_generator.py  test_print_on_exception.py  test_timezone.py
tests/evernote/: cassete_dtd  test_auth.py  test_evernote.py  test_index_generator.py  test_index_renderer.py  test_note_parser.py  test_stored_note.py  test_working_copy.py  test_working_copy_note_parser.py
tests/evernote/data/: index_renderer_empty.html  index_renderer_sample.html
tests/onenote/: test_auth.py  test_client.py  test_index_renderer.py  test_page_parser.py  test_stored_note.py  test_working_copy.py
tests/onenote/data/: index_renderer_empty.html  index_renderer_sample.html  page_parser_full_input.html  page_parser_full_output.html  page_parser_inkml_dot.xml  page_parser_inkml_empty.xml
tests/service/: test_stored_note.py  test_working_copy.py
tests/todoist/: test_auth.py  test_projects_renderer.py  test_todoist.py
