[coverage:run]
source =
    synctogit
    tests

[coverage:report]
show_missing = True
fail_under = 80
exclude_lines =
    pragma: no cover
    @abstractmethod
    @abc.abstractmethod

[flake8]
; E203 -- ignore whitespace in slices. See https://github.com/ambv/black#slices
; W503 line break before binary operator
ignore = E203,W503
max-complexity = 9
max-line-length = 90

[isort]
; https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
; https://github.com/ambv/black#how-black-wraps-lines
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
not_skip = __init__.py
known_first_party = synctogit
known_third_party = git

[metadata]
author = Kostya Esmukov
author_email = kostya@esmukov.ru
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
description = Syncs Evernote(R) notes to a git repository in HTML.
license = MIT
long_description = file: README.rst
name = synctogit
url = https://github.com/KostyaEsmukov/SyncToGit
version = 3.0.0b10

[options]
include_package_data = True
install_requires =
    GitPython>=2.1.11,<3
    cached-property
    click>=6
    configupdater>=0.3.2,<1
    defusedxml>=0.5.0,<1
    jinja2>=2,<3
    prompt_toolkit>=2,<3
    python-dateutil>=2.7.0,<3
    pytz
    regex
    tzlocal
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.entry_points]
console_scripts =
    synctogit = synctogit.main:main

[options.extras_require]
dev =
    black==19.10b0; python_version>='3.6'
    coverage==5.1
    flake8==3.8.4
    isort==4.3.21
    pytest==5.4.2
    sphinx==3.0.3
    vcrpy==4.0.2
todoist =
    todoist-python==8.0.0
evernote =
    evernote3==1.25.14
    oauth2==1.9.0.post1
    oauthlib>=1.0.3
onenote =
    beautifulsoup4>=4.6,<5
    requests-oauthlib>=1.2.0,<2
    requests_toolbelt>=0.9.1,<1

[options.packages.find]
where = src

[tool:pytest]
log_level = INFO

; Show warnings. Similar to `python -Wd`.
filterwarnings = d

; Show skip reasons
; Print shorter tracebacks
addopts = -ra --tb=short
