[coverage:run]
source =
    synctogit
    tests

[coverage:report]
show_missing = True
fail_under = 80
exclude_lines =
    pragma: no cover
    @abstractmethod
    @abc.abstractmethod

[flake8]
; E203 -- ignore whitespace in slices. See https://github.com/ambv/black#slices
; W503 line break before binary operator
ignore = E203,W503
max-complexity = 15
max-line-length = 90

[isort]
known_third_party = git
multi_line_output = 3
profile = black

[metadata]
author = Kostya Esmukov
author_email = kostya@esmukov.ru
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
description = Syncs Evernote(R) notes to a git repository in HTML.
license = MIT
long_description = file: README.rst
name = synctogit
url = https://github.com/KostyaEsmukov/SyncToGit
version = 3.0.0b10

[options]
include_package_data = True
install_requires =
    GitPython>=2.1.11,<4
    cached-property
    click>=6
    configupdater>=0.3.2,<4
    defusedxml>=0.5.0,<1
    jinja2
    prompt_toolkit>=3,<4
    python-dateutil>=2.7.0,<3
    pytz
    regex
    tzlocal
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    synctogit = synctogit.main:main

[options.extras_require]
dev =
    black==22.10.0
    coverage==6.5.0
    flake8==5.0.4
    isort==5.10.1
    pytest==7.2.0
    sphinx==4.3.2
    vcrpy==4.2.1
todoist =
    requests
evernote =
    evernote3==1.25.14
    oauth2==1.9.0.post1
    oauthlib>=1.0.3
onenote =
    beautifulsoup4>=4.6,<5
    requests-oauthlib>=1.2.0,<2
    requests_toolbelt>=0.9.1,<1

[options.packages.find]
where = src

[tool:pytest]
log_level = INFO

; Show warnings. Similar to `python -Wd`.
filterwarnings = d

; Show skip reasons
; Print shorter tracebacks
addopts = -ra --tb=short
